<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="28dp" android:gravity="center_vertical">
    <include layout="@layout/view_brand_large" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_gravity="center_horizontal" style="@style/Text.Title" android:textSize="30sp" android:text="@string/welcome_title" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:gravity="center" style="@style/Text.Body" android:text="@string/welcome_subtitle" />
    <Space android:layout_width="match_parent" android:layout_height="48dp" />
    <com.google.android.material.button.MaterialButton android:id="@+id/create" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/welcome_create" />
    <com.google.android.material.button.MaterialButton android:id="@+id/import_wallet" style="@style/Widget.RandWallet.Button.Secondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/welcome_import" />
</LinearLayout>
